# wt-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  README.md  STATUS.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: commands.md  configuration.md  hooks.md
examples/: docker-project.yaml  nodejs-project.yaml  python-project.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_gitignore.py  test_hooks.py  test_worktree.py
wt_tools/: __init__.py  cli.py  config.py  gitignore.py  hooks.py  worktree.py
